Sat Apr  2 15:24:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_check_arity): returns argc.

Fri Apr  1 20:58:33 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Data generation to implement
	  swapcase functionality for titlecase characters. Swapcase isn't defined
	  by Unicode, because the purpose/usage of swapcase is unclear anyway.
	  The implementation follows a proposal from Nobu, swaping the case of
	  each component of a titlecase character individually.
	  This means that the titlecase characters have to be decomposed.

	* enc/unicode.c: Code using the above data.

	* test/ruby/enc/test_case_mapping.rb: Tests for the above.

Fri Apr  1 14:55:28 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* configure.in (AC_CONFIG_FILES): $srcdir/.git can be a file pointing
	  the real git_dir, such as when the git working tree is a "linked
	  working tree" (a working tree created by git-worktree). So use
	  git-rev-parse --git-dir to check if $srcdir is the top-level of a git
	  repository, not just checking if the $srcdir/.git directory does exist
	  or not.  [ruby-core:74759] [Bug #12239]

	* tool/change_maker.rb: use tool/vcs.rb to detect VCS. This used to have
	  its own VCS detection code, while we have tool/vcs.rb.

	* tool/vcs.rb (detect): remove code duplication

Fri Apr  1 04:50:44 2016  Eric Wong  <e@80x24.org>

	* ext/openssl/ossl_ssl.c (ossl_sslctx_s_alloc):
	  enable SSL_MODE_ACCEPT_MOVING_WRITE_BUFFER by default
	  [Bug #12126]

Fri Apr  1 01:13:55 2016  Benoit Daloze  <eregontp@gmail.com>

	* thread.c (update_coverage): Do not track coverage in loaded files
	  after Coverage.result. Avoids out-of-bounds access. [Bug #12237]

	* ext/coverage/coverage.c (coverage_clear_result_i): document.

Thu Mar 31 19:16:16 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c: need to set initial value of GC_HEAP_FREE_SLOTS_GOAL_RATIO.

Thu Mar 31 17:50:27 2016  Koichi Sasada  <ko1@atdot.net>
